--- a/villataika.fi/en/bed.html
+++ b/villataika.fi/en/bed.html
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+      <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -86,56 +86,58 @@
 
   <div id="rcol">
     <div id="rcontent">
-      <div class="wide_bed_box">
-  <div class="bed_box">
-      Welcome to the charming and peaceful Villa Taika! <br/> We have created unique B&amp;B, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br/> We hope you will be revitalisedand rested in the beauty of our surroundings! <br/>
+
+      <div class="wide_bedbox">
+  <div class="bedbox">
+      Welcome to the charming and peaceful Villa Taika! <br/> We have created unique B&amp;, with 8 individually decorated rooms. Inspired by our trips to the Orient , we brought that beauty and inspiration with us in the pieces of furniture, that we selected to our rooms. <br/> We hope you will be revitalisedand rested in the beauty of our surroundings! <br/>
 In the backyard we have a garden with the pond and waterfall. You can relax in the garden by listening to the soothing sound of the water or make trips to the nearby tourist sights. The Billnäs 15km, Mustio castle 15km, beautiful towns of Tammisaari 35 km and Hanko 65km
   </div>
 </div>
 <div class="divider"></div>
 
-<div class="wide_box">
+<div class="widebox">
     <br/>
-  <div class="small_box">
+  <div class="smallbox">
     <a href="suites.html">
       Suites (w.shower) 
       <img src="../images/sun_small.jpg"  
-          alt=Suites (w.shower)  
-          height="187px"  width="250px" />
+          alt=shortSuites (w.shower)  
+          height=187px  width=250px />
 </a>    <br/>
     3 suites with own shower 85-95 €
   </div>
-  <div class="small_box">
+  <div class="smallbox">
     <a href="deluxe.html">
     Deluxe (w.toilet) 
       <img src="../images/orange_small.jpg"  
-          alt=Deluxe (w.toilet)  
-          height="187px"  width="250px" />
+          alt=shortDeluxe (w.toilet)  
+          height=187px  width=250px />
 </a>    <br/>
     2 rooms with toilet ensuite 75€
   </div>
-  <div class="small_box">
+  <div class="smallbox">
     <a href="standard.html">
     Standard (shared) 
       <img src="../images/rose_small.jpg"  
-          alt="Standard (shared)"  
-          height="187px"  width="250px" />
+          alt="shortStandard (shared)"  
+          height=187px  width=250px />
 </a>    <br/>
     2 rooms which share one shower 75€
   </div>
 </div>
 <br/>
-<div class="wide_bed_box">
-  <div class="bed_box">
+<div class="wide_bedbox">
+  <div class="bedbox">
       The room price is for two people, between 75 and 95€ , and extra beds cost 25€. <br/> The price includes breakfast served between 8:30-10:00, bed-linen and towels. <br/> You can sign into your room between 14-19 . Please let us know what time you'll be arriving! <br/> Checkout by 12 o'clock
   </div>
   
 </div>
 <div class="divider"></div>
 
-    </div>
-    <div class="divider"></div>
+
   </div>
+  <div class="divider"></div>
+
 </div>
 
 <div id="footer">
@@ -151,7 +153,7 @@ In the backyard we have a garden with the pond and waterfall. You can relax in t
   </div>
   <div class="kolmas">
     <a href="index.html">
-    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
