--- a/villataika.fi/en/photos.html
+++ b/villataika.fi/en/photos.html
@@ -5,17 +5,21 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
+  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
+  <script src="../javascripts/controls.js" type="text/javascript"></script> 
+  <script src="../javascripts/rails.js" type="text/javascript"></script> 
+  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : asian elegance Photos" />
+  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : asian elegance Photos" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="en"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Photos</title>
+  <title>Bed & Breakfast Villa Taika : Photos</title>
   
 </head>
 
@@ -25,7 +29,7 @@
 
   <div id="header">
       <div class="centre">
-        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+      <img src="../images/logo_iso.png">
       </div>
       <div id="slogan">asian elegance</div>
   </div>
@@ -67,9 +71,9 @@
       <div class="divider"></div>
     
         <a href="../fi/photos.html" >  
-          <img src="../images/fi.gif" alt="fi"/> </a>
+          <img src="../images/fi.gif"/> </a>
         <a href="photos.html" class='selected'>  
-          <img src="../images/en.gif" alt="en"/> </a>
+          <img src="../images/en.gif"/> </a>
 
       <h3>
         <a href="news.html">  <span>News</span> </a>
@@ -86,67 +90,69 @@
 
   <div id="rcol">
     <div id="rcontent">
-      <div class="photo_box_w">
+
+      <div class="photobox_w">
   <div class="eiole">
     <a href="../photos/large/w_frogs.jpg" rel="lightbox[photos]" title="Dancing frogs">
-      <img src="../photos/w_frogs.jpg" alt="Dancing frogs"/>
+      <img src="../photos/w_frogs.jpg"  >
     </a><br/>
     Dancing frogs
   </div>
 </div>
-<div class="photo_box_w">
+<div class="photobox_w">
   <div class="eiole">
     <a href="../photos/large/w_terasse.jpg" rel="lightbox[photos]" title="Garden terasse">
-      <img src="../photos/w_terasse.jpg" alt="Garden terasse"/>
+      <img src="../photos/w_terasse.jpg"  >
     </a><br/>
     Garden terasse
   </div>
 </div>
-<div class="photo_box_w">
+<div class="photobox_w">
   <div class="eiole">
     <a href="../photos/large/w_peony.jpg" rel="lightbox[photos]" title="Fountain in the garden">
-      <img src="../photos/w_peony.jpg" alt="Fountain in the garden"/>
+      <img src="../photos/w_peony.jpg"  >
     </a><br/>
     Fountain in the garden
   </div>
 </div>
-<div class="photo_box_h">
+<div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_aurinko_wc.jpg" rel="lightbox[photos]" title="Aurinko wc">
-      <img src="../photos/h_aurinko_wc.jpg" alt="Aurinko wc"/>
+      <img src="../photos/h_aurinko_wc.jpg"  >
     </a><br/>
     Aurinko wc
   </div>
 </div>
-<div class="photo_box_h">
+<div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_curves.jpg" rel="lightbox[photos]" title="Aurinko carvings">
-      <img src="../photos/h_curves.jpg" alt="Aurinko carvings"/>
+      <img src="../photos/h_curves.jpg"  >
     </a><br/>
     Aurinko carvings
   </div>
 </div>
-<div class="photo_box_h">
+<div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_lootus_wc.jpg" rel="lightbox[photos]" title="Lotus suite toilet">
-      <img src="../photos/h_lootus_wc.jpg" alt="Lotus suite toilet"/>
+      <img src="../photos/h_lootus_wc.jpg"  >
     </a><br/>
     Lotus suite toilet
   </div>
 </div>
-<div class="photo_box_h">
+<div class="photobox_h">
   <div class="eiole">
     <a href="../photos/large/h_highview.jpg" rel="lightbox[photos]" title="Villa Taika from above">
-      <img src="../photos/h_highview.jpg" alt="Villa Taika from above"/>
+      <img src="../photos/h_highview.jpg"  >
     </a><br/>
     Villa Taika from above
   </div>
 </div>
 
 
-    </div>
-    <div class="divider"></div>
+
   </div>
+  <div class="divider"></div>
+
 </div>
 
 <div id="footer">
@@ -162,7 +168,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
     </a>
   </div>
 </div>
