--- a/villataika.fi/fi/activities.html
+++ b/villataika.fi/fi/activities.html
@@ -5,17 +5,21 @@
   <link href="../stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/effects.js" type="text/javascript"></script> 
+  <script src="../javascripts/dragdrop.js" type="text/javascript"></script> 
+  <script src="../javascripts/controls.js" type="text/javascript"></script> 
+  <script src="../javascripts/rails.js" type="text/javascript"></script> 
+  <script src="../javascripts/application.js" type="text/javascript"></script> 
   <script src="../javascripts/prototype.js" type="text/javascript"></script> 
   <script src="../javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
   <script src="../javascripts/lightbox.js" type="text/javascript"></script> 
 
   <link href="../favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed and Breakfast Villa Taika : taianomaista tyylikkyyttä Tekemistä" />
+  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : taianomaista tyylikkyyttä Tekemistä" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="fi"/>  
-  <title>Bed &amp; Breakfast Villa Taika : Tekemistä</title>
+  <title>Bed & Breakfast Villa Taika : Tekemistä</title>
   
 </head>
 
@@ -25,7 +29,7 @@
 
   <div id="header">
       <div class="centre">
-        <img src="../images/logo_iso.png" alt="Villa Taika logo"/>
+      <img src="../images/logo_iso.png">
       </div>
       <div id="slogan">taianomaista tyylikkyyttä</div>
   </div>
@@ -67,9 +71,9 @@
       <div class="divider"></div>
     
         <a href="activities.html" class='selected'>  
-          <img src="../images/fi.gif" alt="fi"/> </a>
+          <img src="../images/fi.gif"/> </a>
         <a href="../en/activities.html" >  
-          <img src="../images/en.gif" alt="en"/> </a>
+          <img src="../images/en.gif"/> </a>
 
       <h3>
         <a href="news.html">  <span>Uutiset</span> </a>
@@ -86,98 +90,100 @@
 
   <div id="rcol">
     <div id="rcontent">
+
       
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/swim.jpg" rel="lightbox[activity]" title="Uimista läheisissä järvissä">
 	    <h2> Uimista läheisissä järvissä </h2>
-        <img src="../activities/swim.jpg" alt="Uimista läheisissä järvissä"/>
+        <img src="../activities/swim.jpg" >
         </a>
     Lähin järvi on Isosimi, jonka uimapaikkaan on 200m. Villa Taian lähiympäristössä on muitakin järviä, joista monet sopivat myös perheen pienimpienkin polskutteluun. Niihin on vain muutaman minuutin matka autolla tai polkupyörällä.
   </div>
 </div>
 
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/forest.jpg" rel="lightbox[activity]" title="Kävelyä tai pyöräilyä lähimetsissä">
 	    <h2> Kävelyä tai pyöräilyä lähimetsissä </h2>
-        <img src="../activities/forest.jpg" alt="Kävelyä tai pyöräilyä lähimetsissä"/>
+        <img src="../activities/forest.jpg" >
         </a>
     Metsissä löytyy pikkupolkuja, joilla voi patikoida tai pyöräillä. Voit tehdä lyhyitäkin retkiä läheiseen Iso-Simin luonnonsuojelualueelle. Tuo retkipyörä mukanasi, mutta meiltä saat pyörän lainaksi, jos haluat vaikka Fiskarsiin pyöräillä
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/row.jpg" rel="lightbox[activity]" title="Soutelua">
 	    <h2> Soutelua </h2>
-        <img src="../activities/row.jpg" alt="Soutelua"/>
+        <img src="../activities/row.jpg" >
         </a>
     On mahdollista vuokrata edullisesti soutuvene ja soudella läheisellä järvellä. Isosimin luonnonsuojelualue järvineen on hiljainen ja rauhoittava kokemus.
   </div>
 </div>
 
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/garden.jpg" rel="lightbox[activity]" title="Puutarha">
 	    <h2> Puutarha </h2>
-        <img src="../activities/garden.jpg" alt="Puutarha"/>
+        <img src="../activities/garden.jpg" >
         </a>
     Puutarhassamme on monia levähdyspaikkoja, joissa voit istuksia, vaikka kirjaa lukemassa ja nauttia olostasi vesiputouksen solistessa rauhoittavsti.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/fiskars.jpg" rel="lightbox[activity]" title="Fiskarsin ruukki">
 	    <h2> Fiskarsin ruukki </h2>
-        <img src="../activities/fiskars.jpg" alt="Fiskarsin ruukki"/>
+        <img src="../activities/fiskars.jpg" >
         </a>
     Fiskarsin ruukki on ihana elämys . Siellä on pikku liikkeitä, jotka myyvät paikallisten käsityöläisten valmistamia kauniita esineitä. Myös hienot taidenäyttelyt rikastuttavat päivääsi. Fiskarsissa Ihanat kahvilat ja ravintolat tarjoavat maukasta ruokaa tai kahvia ja pikkupurtavaa. Sinne on vain 5 minuutin automatka
   </div>
 </div>
 
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/hanko.jpg" rel="lightbox[activity]" title="Tammisaari ja Hanko">
 	    <h2> Tammisaari ja Hanko </h2>
-        <img src="../activities/hanko.jpg" alt="Tammisaari ja Hanko"/>
+        <img src="../activities/hanko.jpg" >
         </a>
     Tammisaari ja Hanko ovat molemmat idyllisiä kaupunkeja meren rannalla. Niihin voi mennä vaikka päiväretkelle nauttimaan merellisestä tunnelmasta ja ihastelemaan kaunista puutalo miljöötä. Tammisaareen on puolen tunnin automatka ja Hankoon pääsee hieman alle tunnissa.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/raasepori.jpg" rel="lightbox[activity]" title="Raaseporin linna ja Mustio">
 	    <h2> Raaseporin linna ja Mustio </h2>
-        <img src="../activities/raasepori.jpg" alt="Raaseporin linna ja Mustio"/>
+        <img src="../activities/raasepori.jpg" >
         </a>
     Raaseporin vanhat ja komeat linnarauniot ovat alle puolentunnin matkan päässä. Ja upea Mustion linna ja sen kaunis puutarha vain, 20 min ajomatkan päässä.Mustiossa on myös tunnelmallinen ravintola,jossa voi aterioida tai juoda kupposen kahvia.
   </div>
 </div>
 
 
-<div class="activity_box">
+<div class="activitybox">
   <div class="box_inner">
       <a href="../activities/large/groups.jpg" rel="lightbox[activity]" title="Ryhmille">
 	    <h2> Ryhmille </h2>
-        <img src="../activities/groups.jpg" alt="Ryhmille"/>
+        <img src="../activities/groups.jpg" >
         </a>
     <a href="http://www.kdadventure.com/fi/activities/kursseja/">KD Adventure</a> Naapurissamme toimiva yritys voi järjestää ryhmille toimintaa. Vaikkapa luontoretkiä, kanoottiretkiä, paintballia  tai tulisilla hiilillä kävelyä uskaliaimmille.
   </div>
 </div>
 <div class='line'> &nbsp;</div>
 
-    </div>
-    <div class="divider"></div>
+
   </div>
+  <div class="divider"></div>
+
 </div>
 
 <div id="footer">
@@ -193,7 +199,7 @@
   </div>
   <div class="kolmas">
     <a href="index.html">
-    	<img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198"/>
+    <img alt="" src="../images/logo_pien.gif" border="0" height="33" width="198">
     </a>
   </div>
 </div>
