--- a/villataika.fi/index.html
+++ b/villataika.fi/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <link href="stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" /> 
-  <link href="stylesheets/stylesheet.css" media="screen" rel="stylesheet" type="text/css" /> 
+  <link href="stylesheets/styles.css" media="screen" rel="stylesheet" type="text/css" /> 
   <script src="javascripts/prototype.js" type="text/javascript"></script> 
   <script src="javascripts/effects.js" type="text/javascript"></script> 
   <script src="javascripts/dragdrop.js" type="text/javascript"></script> 
